# jinja-compose

./: .flake8  .gitignore  pyproject.toml  tox.ini
jinja-docker-compose/: jinja-docker-compose.py  jinja-docker-compose.yml
jinja_docker_compose/: main.py
src/jinja_docker_compose/: cli.py
tests/: docker-compose.dic  docker-compose.ref.yml  test1.py  test_cli.py
