[tool.poetry]
name = "jinja-docker-compose"
version = "0.1.0"
description = ""
authors = ["Morgan <Morgan@quzed.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "jinja_docker_compose"}]

[tool.poetry.dependencies]
python = "^3.8"
docker-compose = "^1.29.2"
Jinja2 = "^3.1.2"
PyYAML = "^5.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
